--- a/creProxy/app/proxy.tmpl
+++ b/creProxy/app/proxy.tmpl
@@ -5,7 +5,7 @@
 {{ range $subdomain, $containers := groupByMulti $ "Env.CRE_SUBDOMAIN" "," }}
 
 {{ $subdomain := trim $subdomain }}
-{{ $host := coalesce $CurrentDomain $subdomain }}
+{{ $host := $CurrentDomain + "." + $subdomain }}
 
 # {{ $host }}
 
