--- a/creProxy/app/openssl.sh.tmpl
+++ b/creProxy/app/openssl.sh.tmpl
@@ -12,7 +12,7 @@ openssl req -batch -config openssl.cfg -new -x509 -sha256 -newkey rsa:2048 -node
 {{ range $subdomain, $containers := groupByMulti $ "Env.CRE_SUBDOMAIN" "," }}
 
 {{ $subdomain := trim $subdomain }}
-{{ $host := (print "%s.%s" $CurrentDomain $subdomain) }}
+{{ $host := (printf "%s.%s" $subdomain $CurrentDomain) }}
 
 # {{ $host }}
 # for localhost create openssl sel-signed
