--- a/creProxy/app/proxy.tmpl
+++ b/creProxy/app/proxy.tmpl
@@ -78,15 +78,15 @@ upstream {{ $host }} {
 				{{/* If only 1 port exposed, use that */}}
 				{{ if eq $addrLen 1 }}
 					{{ $address := index $container.Addresses 0 }}
-					{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork) }}
                                         # {{ $container.Name }}
+                                        # first branch
 			                server {{ $containerNetwork.IP }}:{{ $address.Port }};
 				{{/* If more than one port exposed, use the one matching VIRTUAL_PORT env var, falling back to standard web port 80 */}}
 				{{ else }}
-					{{ $port := coalesce $container.Env.VIRTUAL_PORT "80" }}
+					{{ $port := coalesce $container.Env.CRE_PORT "80" }}
 					{{ $address := where $container.Addresses "Port" $port | first }}
-					{{ template "upstream" (dict "Container" $container "Address" $address "Network" $containerNetwork) }}
 			                # {{ $container.Name }}
+                                        # second branch
 			                server {{ $containerNetwork.IP }}:{{ $address.Port }};
 				{{ end }}
 			{{ end }}
