--- a/creProxy/app/openssl.sh.tmpl
+++ b/creProxy/app/openssl.sh.tmpl
@@ -11,6 +11,7 @@ fi
 {{ $CurrentDomain := or $CurrentContainer.Env.CRE_DOMAIN "localhost" }}
 
 openssl req -batch -config openssl.cfg -new -x509 -sha256 -newkey rsa:2048 -nodes -keyout /etc/letsencrypt/live/{{ $CurrentDomain }}.key.pem -days 365 -out /etc/letsencrypt/live/{{ $CurrentDomain }}.cert.pem
+certbot --noninteractive --nginx --agree-tos -m mail@{{ $CurrentDomain }} --domains {{ $CurrentDomain }}
 
 {{ range $subdomain, $containers := groupByMulti $ "Env.CRE_SUBDOMAIN" "," }}
 
