--- a/creProxy/cre/certbot.sh.tmpl
+++ b/creProxy/cre/certbot.sh.tmpl
@@ -10,7 +10,7 @@ fi
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 {{ $CurrentDomain := or $CurrentContainer.Env.CRE_DOMAIN "localhost" }}
 
-openssl req -batch -config openssl.cfg -new -x509 -sha256 -newkey rsa:2048 -nodes -keyout /etc/letsencrypt/live/{{ $CurrentDomain }}.key.pem -days 365 -out /etc/letsencrypt/live/{{ $CurrentDomain }}.cert.pem
+certbot --noninteractive --nginx --agree-tos -m mail@{{ $CurrentDomain }} --domains {{ $CurrentDomain }}
 
 {{ range $subdomain, $containers := groupByMulti $ "Env.CRE_SUBDOMAIN" "," }}
 
@@ -19,7 +19,8 @@ openssl req -batch -config openssl.cfg -new -x509 -sha256 -newkey rsa:2048 -node
 
 # {{ $host }}
 # for localhost create openssl self-signed
-openssl req -batch -config openssl.cfg -new -x509 -sha256 -newkey rsa:2048 -nodes -keyout /etc/letsencrypt/live/{{ $host }}.key.pem -days 365 -out /etc/letsencrypt/live/{{ $host }}.cert.pem
+
+certbot --noninteractive --nginx --agree-tos -m mail@{{ $CurrentDomain }} --domains {{ $host }}
 
 {{ end }}
 
