split openssl and certbot by directory

--- a/creProxy/cre/certbot.sh.tmpl
+++ b/creProxy/cre/certbot.sh.tmpl
@@ -1,4 +1,10 @@
 #!/bin/sh 
+
+if ! [ -e /etc/letsencrypt/live ]
+then
+   mkdir /etc/letsencrypt/live
+fi
+
 {{ if (not (exists "/etc/letsencrypt/live/dhparam.pem")) }}
 if ! [ -e /etc/letsencrypt/live/dhparam.pem ]
 then
@@ -10,7 +16,7 @@ fi
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 {{ $CurrentDomain := or $CurrentContainer.Env.CRE_DOMAIN "localhost" }}
 
-# use --staging for development and during implementation
+# use --staging for development and during implementation - works not for localhost / use openssl instead
 certbot --staging --noninteractive --nginx --agree-tos -m mail@{{ $CurrentDomain }} --domains {{ $CurrentDomain }}
 
 {{ range $subdomain, $containers := groupByMulti $ "Env.CRE_SUBDOMAIN" "," }}
@@ -19,9 +25,8 @@ certbot --staging --noninteractive --nginx --agree-tos -m mail@{{ $CurrentDomain
 {{ $host := (printf "%s.%s" $subdomain $CurrentDomain) }}
 
 # {{ $host }}
-# for localhost create openssl self-signed
 
-# use --staging for development and during implementation
+# use --staging for development and during implementation - works not for localhost / use openssl instead
 certbot --staging --noninteractive --nginx --agree-tos -m mail@{{ $CurrentDomain }} --domains {{ $host }}
 
 {{ end }}
