--- a/creProxy/cre/proxy.tmpl
+++ b/creProxy/cre/proxy.tmpl
@@ -118,6 +118,12 @@ server {
 	server_name {{ $host }};
 	listen 443 ssl http2 ;
 	access_log /var/log/nginx/access.log vhost;
+
+	{{ if eq $network_tag "internal" }}
+	# Only allow traffic from internal clients - TODO: use later for localhost
+	include /cre/network_internal.conf;
+	{{ end }}
+
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 	ssl_ciphers 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:!DSS';
 	ssl_prefer_server_ciphers on;
@@ -141,7 +147,7 @@ server {
          # openssl certificates
          ssl_certificate {{ printf "/etc/letsencrypt/openssl/%s.cert.pem" $host }};
          {{ if (exists (printf "/etc/letsencrypt/openssl/%s.key.pem" $host)) }}
-	  ssl_certificate_key printf "/etc/letsencrypt/openssl/%s.key.pem" $host }};
+	  ssl_certificate_key {{ printf "/etc/letsencrypt/openssl/%s.key.pem" $host }};
 	 {{ end }}
 	 {{ if (exists (printf "/etc/letsencrypt/openssl/%s.dhparam.pem" $host)) }}
 	  ssl_dhparam {{ printf "/etc/letsencrypt/openssl/%s.dhparam.pem" $host }};
