--- a/creProxy/cre/proxy.tmpl
+++ b/creProxy/cre/proxy.tmpl
@@ -119,6 +119,7 @@ server {
 	listen 443 ssl http2 ;
 	access_log /var/log/nginx/access.log vhost;
 
+        {{ $network_tag := or (first (groupByKeys $containers "Env.NETWORK_ACCESS")) "external" }}
 	{{ if eq $network_tag "internal" }}
 	# Only allow traffic from internal clients - TODO: use later for localhost
 	include /cre/network_internal.conf;
