--- a/creProxy/cre/proxy.tmpl
+++ b/creProxy/cre/proxy.tmpl
@@ -143,6 +143,8 @@ server {
          {{ else if (exists "/etc/letsencrypt/live/dhparam.pem") }}
           ssl_dhparam /etc/letsencrypt/live/dhparam.pem;
 	 {{ end }}
+         # only for real certificates - disable for the moment ...
+	 # add_header Strict-Transport-Security "max-age=31536000";
 
         {{ else if (exists (printf "/etc/letsencrypt/openssl/%s.cert.pem" $host)) }}
          # openssl certificates
@@ -157,7 +159,6 @@ server {
 	 {{ end }}
         {{ end }}
 
-	add_header Strict-Transport-Security "max-age=31536000";
         {{ if (exists "/etc/nginx/vhost.d/default") }}
 	include /etc/nginx/vhost.d/default;
 	{{ end }}
