--- a/creNginxPhp/cre/php-nginx.tmpl
+++ b/creNginxPhp/cre/php-nginx.tmpl
@@ -4,7 +4,7 @@
 {{ range $phproot, $containers := groupByMulti $ "Env.CRE_PHP_ROOT" "," }}
 
 {{ $phproot := trim $phproot }}
-{{ $phpdomain := replace $phproot "/" "."}}
+{{ $phpdomain := replace $phproot "/" "." -1}}
 {{ $phphost := (printf "php%s.%s" $phpdomain $CurrentDomain) }}
 {{ $rootpath := (printf "/cre/www%s" $phproot) }}
 
