--- a/crePhp/cre/db-config.php.tmpl
+++ b/crePhp/cre/db-config.php.tmpl
@@ -3,30 +3,31 @@
   // add mySQL data
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 {{ if $CurrentContainer.Env.MYSQL_DB }}
- {{ range $mysqlServerPWD, $containers := groupByMulti $ "MYSQL_ROOT_PWD" "," }}
-  {{ $mySqlRootPWD := $mysqlServerPWD}}
+ {{ range $mysqlServerPWD, $containers := groupByMulti $ "Env.MYSQL_ROOT_PWD" "," }}
+  $rootPwd = '{{ $mysqlServerPWD }}';
   {{ range $index, $container := $containers }}
    {{ $mySqlPort := or $container.Env.MYSQL_PORT "3306" }}
+    $port = '{{ $mySqlPort }}';
    {{ range $containerNetwork := $container.Networks }}
-    {{ $mySqlHost := $containerNetwork.IP }}
+    $host = '{{ $containerNetwork.IP }}';
+    $dbName = '{{ $CurrentContainer.Env.MYSQL_DB }}';
+    {{ if $CurrentContainer.Env.MYSQL_USER }}
+    $user = '{{ $CurrentContainer.Env.MYSQL_USER }}';
+    {{ else }}
+    $user = md5("U:$dbName");
+    {{ end }}
+    {{ if $CurrentContainer.Env.MYSQL_PWD }}
+    $password = '{{ $CurrentContainer.Env.MYSQL_PWD }}';
+    {{ else }}
+    $password = md5("PWD:$user:$rootPwd");
+    {{ end }}
+    $dbData['mysql:'.$dbName] = 
+     ['type' => 'mysql', 'host' => $host, 'port' => $port, 
+      'dbname' => $dbName, 'user' => $user, 'password' => $password, 
+       'pdo' => "mysql:host=$host:$port;dbname=$dbName;user=$user;password=$password"];
    {{ end }}
   {{ end }} 
  {{ end }} 
- {{ $mySqlDB := $CurrentContainer.Env.MYSQL_DB}}
- {{ if $CurrentContainer.Env.MYSQL_USER }}
-   $user = '{{ $container.Env.MYSQL_USER }}';
- {{ else }}
-   $user = md5("U:{{ $mySqlDB }}");
- {{ end }}
- {{ if $CurrentContainer.Env.MYSQL_PWD }}
-   $password = '{{ $container.Env.MYSQL_PWD }}';
- {{ else }}
-   $password = md5("PWD:$user:{{$rootPassword}}");
- {{ end }}
-   $dbData[] = 
-    ['type' => 'mysql', 'host' => {{ $mySqlHost}}, 'port' => {{ $mySqlPort }}, 
-     'dbname' => {{ $mySqlDB }}, 'user' => $user, 'password' => $password, 
-      'pdo' => "mysql:host={{ $mySqlHost}}:{{ $mySqlPort }};dbname={{ $mySqlDB }};user=".$user.";password=".$password];
 {{ end }}
 ?>
 
