--- a/creMysql/cre/mysql-add-dbs.sh.tmpl
+++ b/creMysql/cre/mysql-add-dbs.sh.tmpl
@@ -27,7 +27,32 @@ mysql_pwd="{{ $container.Env.MYSQL_PWD }}"
 mysql_pwd="PWD:$(printf '%s' '$mysql_user:{{sha1 $rootPassword}}' | md5sum | cut -d ' ' -f 1)"
 {{ end }}
 
+## ADD here!
+
 {{ end }} 
 ##end of all containers
 {{ end }} 
 ##end of all databases
+
+
+
+
+#### FROM MySQL -> Remove there later....
+if [ -n "$MYSQL_USER_DB" ]; then
+	echo "[i] Creating datebase: $MYSQL_USER_DB"
+	mysql -h 127.0.0.1 -P 3306 --user=root --password=$MYSQL_ROOT_PWD -e "CREATE DATABASE IF NOT EXISTS \`$MYSQL_USER_DB\` CHARACTER SET utf8 COLLATE utf8_general_ci; FLUSH PRIVILEGES;"
+
+	if [ -n "$MYSQL_USER" ] && [ -n "$MYSQL_USER_PWD" ]; then
+		echo "[i] Create new User: $MYSQL_USER with password $MYSQL_USER_PWD for new database $MYSQL_USER_DB."
+		mysql -h 127.0.0.1 -P 3306 --user=root --password=$MYSQL_ROOT_PWD -e "GRANT ALL PRIVILEGES ON \`$MYSQL_USER_DB\`.* TO '$MYSQL_USER'@'%' IDENTIFIED BY '$MYSQL_USER_PWD' WITH GRANT OPTION; FLUSH PRIVILEGES;"
+	else
+		echo "[i] Don\`t need to create new User."
+	fi
+else
+	if [ -n "$MYSQL_USER" ] && [ -n "$MYSQL_USER_PWD" ]; then
+		echo "[i] Create new User: $MYSQL_USER with password $MYSQL_USER_PWD for all database."
+		mysql -h 127.0.0.1 -P 3306 --user=root --password=$MYSQL_ROOT_PWD -e "GRANT ALL PRIVILEGES ON *.* TO '$MYSQL_USER'@'%' IDENTIFIED BY '$MYSQL_USER_PWD' WITH GRANT OPTION; FLUSH PRIVILEGES;"
+	else
+		echo "[i] Don\`t need to create new User."
+	fi
+fi
