--- a/crePhp/cre/db-config.php.tmpl
+++ b/crePhp/cre/db-config.php.tmpl
@@ -4,8 +4,6 @@
 {{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
 {{ if $CurrentContainer.Env.MYSQL_DB }}
  {{ range $mysqlServerPWD, $containers := groupByMulti $ "Env.MYSQL_ROOT_PWD" "," }}
-  //$rootPwd = '{{ $mysqlServerPWD }}';
-
   {{ range $index, $container := $containers }}
    {{ $mySqlPort := or $container.Env.MYSQL_PORT "3306" }}
     $port = '{{ $mySqlPort }}';
@@ -15,12 +13,12 @@
     {{ if $CurrentContainer.Env.MYSQL_USER }}
     $user = '{{ $CurrentContainer.Env.MYSQL_USER }}';
     {{ else }}
-    $user = 'U:'.md5($dbName);
+    $user = substr('U:'.md5($dbName),0,24); 
     {{ end }}
     {{ if $CurrentContainer.Env.MYSQL_PWD }}
     $password = '{{ $CurrentContainer.Env.MYSQL_PWD }}';
     {{ else }}
-    $password = 'PWD:'.md5($user.":".'{{ sha1 $mysqlServerPWD }}');
+    $password = substr('PWD:'.md5($user.":".'{{ sha1 $mysqlServerPWD }}'),0,32); 
     {{ end }}
     $dbData['mysql:'.$dbName] = 
      ['type' => 'mysql', 'host' => $host, 'port' => $port, 
