--- a/creNginxPhp/cre/php-nginx.tmpl
+++ b/creNginxPhp/cre/php-nginx.tmpl
@@ -9,6 +9,7 @@
 {{ $phpdomain := replace $phproot "/" "-" -1}}
 {{ $phphost := (printf "php.%s.%s" $phpdomain $CurrentDomain) }}
 {{ $rootpath := (printf "/cre/%s" $phproot) }}
+{{ $nginxProxy := "empty" }}
 
 # {{ $phphost }}
 upstream {{ $phphost }} {
@@ -16,10 +17,8 @@ upstream {{ $phphost }} {
 {{ range $container := $containers }}
 
     {{ if $container.Env.CRE_NGINX }}
-# Name of Wunsch-Proxy {{ $container.Env.CRE_NGINX }}';
-    {{ else }}
-# No Wunsch-Proxy defined
-    {{ end }}
+# Name of Wunsch-Proxy {{ $container.Env.CRE_NGINX }};
+        {{ $nginxProxy := $container.Env.CRE_NGINX }}
 
 	{{ $addrLen := len $container.Addresses }}
 	{{ range $knownNetwork := $CurrentContainer.Networks }}
@@ -44,24 +43,19 @@ upstream {{ $phphost }} {
 			{{ end }}
 		{{ end }}
 	{{ end }}
+
+    {{ else }}
+# No related NGINX-Proxy defined
+    {{ end }}
 {{ end }}
 
 
 }
 
+{{ if (ne $nginxProxy := "empty") }}
+
 server {
-    #listen 80 default;
     listen 80;
-    #listen [::]:80 default;
-    #listen 4443 ssl;
-    #listen [::]:443 default ssl;
-
-
-    #ssl_certificate     /certs/domain.crt;
-    #ssl_certificate_key /certs/domain.key;   
-    #ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
-    #ssl_ciphers         HIGH:!aNULL:!MD5;
-
  
     client_max_body_size 108M;
 
@@ -73,8 +67,6 @@ server {
     if (!-e $request_filename) {
         rewrite ^.*$ /index.php last;
     }
-
-
 
         add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;";
         add_header X-Frame-Options SAMEORIGIN;
@@ -117,7 +109,6 @@ server {
             access_log off;
         }
 
-
     location ~ \.php$ {
         fastcgi_pass {{ $phphost }};
         fastcgi_index index.php;
@@ -129,5 +120,6 @@ server {
     }
     
 }
+{{ end }}
 
 {{ end }}
