--- a/creNginxPhp/cre/php-nginx.tmpl
+++ b/creNginxPhp/cre/php-nginx.tmpl
@@ -9,7 +9,7 @@
 {{ $phpdomain := replace $phproot "/" "-" -1}}
 {{ $phphost := (printf "php.%s.%s" $phpdomain $CurrentDomain) }}
 {{ $rootpath := (printf "/cre/%s" $phproot) }}
-{{ $nginxProxy := "empty" }}
+{{ $nginxProxy := "emp-ty" }} 
 
 # {{ $phphost }}
 upstream {{ $phphost }} {
@@ -17,7 +17,7 @@ upstream {{ $phphost }} {
 {{ range $container := $containers }}
 
     {{ if $container.Env.CRE_NGINX }}
-# Name of Wunsch-Proxy {{ $container.Env.CRE_NGINX }};
+# Name of Wunsch-Proxy {{ $container.Env.CRE_NGINX }}
         {{ $nginxProxy := $container.Env.CRE_NGINX }}
 
 	{{ $addrLen := len $container.Addresses }}
@@ -52,7 +52,7 @@ upstream {{ $phphost }} {
 
 }
 
-{{ if (ne $nginxProxy := "empty") }}
+{{ if (ne $nginxProxy "empty") }}
 
 server {
     listen 80;
