Try filtering related phps with where

--- a/creNginxPhp/cre/php-nginx.tmpl
+++ b/creNginxPhp/cre/php-nginx.tmpl
@@ -14,7 +14,7 @@
 # {{ $phphost }}
 upstream {{ $phphost }} {
 
-{{ range $container := $containers }}
+{{ range $container := where $containers "Env.CRE_NGINX" $CurrentContainer.Name }}
 
     {{ if $container.Env.CRE_NGINX }}
 # Name of Wunsch-Proxy {{ $container.Env.CRE_NGINX }}
@@ -47,6 +47,9 @@ upstream {{ $phphost }} {
     {{ else }}
 # No related NGINX-Proxy defined
     {{ end }}
+# Related Proxy found: server-section for {{ $phphost }} here 
+{{ else }}
+# No related proxy found: no server section for {{ $phphost }}
 {{ end }}
 
 
