--- a/creMysql/cre/mysql-add-dbs.sh.tmpl
+++ b/creMysql/cre/mysql-add-dbs.sh.tmpl
@@ -30,11 +30,28 @@ mysql_pwd="PWD:$(printf '%s' '$mysql_user:{{sha1 $rootPassword}}' | md5sum | cut
 mysql_pwd="${pwd:0:32}"
 {{ end }}
 
-echo "[i] Creating datebase: {{ $mysqlDb }}"
+#maybe (??) import sql only if db did not exist before ??
+if [ $(mysqlshow -h 127.0.0.1 -P 3306 --user=root --password={{$rootPassword}}  {{ $mysqlDb }} 1>/dev/null 2>/dev/null) -eq o ]; then
+ echo "Database exists: {{ $mysqlDb }}"
+else
+ echo "Database missing: {{ $mysqlDb }}"
+fi
+
+echo "Creating database: {{ $mysqlDb }}"
 mysql -h 127.0.0.1 -P 3306 --user=root --password={{$rootPassword}} -e "CREATE DATABASE IF NOT EXISTS \`{{ $mysqlDb }}\` CHARACTER SET utf8 COLLATE utf8_general_ci; FLUSH PRIVILEGES;"
 
-echo "[i] Create new User: $mysql_user with password $mysql_pwd for new database {{ $mysqlDb }}."
+echo "Create new User: $mysql_user with password $mysql_pwd for new database {{ $mysqlDb }}."
 mysql -h 127.0.0.1 -P 3306 --user=root --password={{$rootPassword}} -e "GRANT ALL PRIVILEGES ON \`{{ $mysqlDb }}\`.* TO '$mysql_user'@'%' IDENTIFIED BY '$mysql_pwd' WITH GRANT OPTION; FLUSH PRIVILEGES;"
+
+## if init sql file exists import data
+{{ if (exists "/cre/mysql/{{ $mysqlDb }}.init.sql") }}
+if [ -e /cre/mysql/{{ $mysqlDb }}.init.sql ]
+then
+   echo "Initialize datebase by file: {{ $mysqlDb }}"
+   mysql -h 127.0.0.1 -P 3306 --user=root --password={{$rootPassword}} < /cre/mysql/{{ $mysqlDb }}.init.sql
+   mv /cre/mysql/{{ $mysqlDb }}.init.sql /cre/mysql/{{ $mysqlDb }}.done.sql
+fi
+{{ end }}
 
 {{ end }} 
 ##end of all containers
