JupyterHub-Proxy should not listen to all SubDomains

--- a/creJupyter/cre/jupyterhub_config.py.tmpl
+++ b/creJupyter/cre/jupyterhub_config.py.tmpl
@@ -1,3 +1,7 @@
+{{ $CurrentContainer := where $ "ID" .Docker.CurrentContainerID | first }}
+{{ $CurrentNetwork := index $currentContainer.Networks 0 }}
+{{ $CurrentIP := $CurrentNetwork.IP }}
+
 # Configuration file for jupyterhub.
 
 #------------------------------------------------------------------------------
@@ -92,6 +96,8 @@
 #  
 #  This is the address on which the proxy will bind. Sets protocol, ip, base_url
 #c.JupyterHub.bind_url = 'http://:8000'
+#c.JupyterHub.bind_url = '127.0.0.1:8000'
+c.JupyterHub.bind_url = '{{ $CurrentIP }}:8000'
 
 ## Whether to shutdown the proxy when the Hub shuts down.
 #  
@@ -273,6 +279,8 @@
 #  .. deprecated: 0.9
 #      Use JupyterHub.bind_url
 #c.JupyterHub.ip = ''
+#c.JupyterHub.ip = '127.0.0.1'
+#c.JupyterHub.ip = '{{ CurrentIP }}'
 
 ## Supply extra arguments that will be passed to Jinja environment.
 #c.JupyterHub.jinja_environment_options = {}
@@ -769,6 +777,7 @@
 #  
 #  Defaults to an empty set, in which case no user has admin access.
 #c.Authenticator.admin_users = set()
+c.Authenticator.admin_users = {'admin'}
 
 ## Automatically begin the login process
 #  
