--- a/creMysql/cre/mysql-add-dbs.sh.tmpl
+++ b/creMysql/cre/mysql-add-dbs.sh.tmpl
@@ -44,12 +44,12 @@ echo "Create new User: $mysql_user with password $mysql_pwd for new database {{ 
 mysql -h 127.0.0.1 -P 3306 --user=root --password={{$rootPassword}} -e "GRANT ALL PRIVILEGES ON \`{{ $mysqlDb }}\`.* TO '$mysql_user'@'%' IDENTIFIED BY '$mysql_pwd' WITH GRANT OPTION; FLUSH PRIVILEGES;"
 
 ## if init sql file exists import data
-{{ if (exists "/cre/mysql/dumps/{{ $mysqlDb }}/database.init.sql") }}
+{{ if (exists (printf "/cre/mysql/dumps/%s/database.init.sql" $mysqlDb)) }}
 if [ -e /cre/mysql/dumps/{{ $mysqlDb }}/database.init.sql ]
 then
    echo "Initialize datebase by file: {{ $mysqlDb }}"
    mysql -h 127.0.0.1 -P 3306 --user=root --password={{$rootPassword}} < /cre/mysql/dumps/{{ $mysqlDb }}/database.init.sql
-   mv /cre/mysql/dumps/{{ $mysqlDb }}/database.init.sql /cre/mysql/dumps/{{ $mysqlDb }}/database.done.sql
+   mv {{ (printf "/cre/mysql/dumps/%s/database.init.sql" $mysqlDb) }} {{ (printf "/cre/mysql/dumps/%s/database.done.sql" $mysqlDb) }}
 fi
 {{ end }}
 
