Dollars are important

--- a/creJupyter/cre/jupyterhub_config.py.tmpl
+++ b/creJupyter/cre/jupyterhub_config.py.tmpl
@@ -280,7 +280,7 @@ c.JupyterHub.bind_url = '{{ $CurrentIP }}:8000'
 #      Use JupyterHub.bind_url
 #c.JupyterHub.ip = ''
 #c.JupyterHub.ip = '127.0.0.1'
-#c.JupyterHub.ip = '{{ CurrentIP }}'
+#c.JupyterHub.ip = '{{ $CurrentIP }}'
 
 ## Supply extra arguments that will be passed to Jinja environment.
 #c.JupyterHub.jinja_environment_options = {}
