--- a/creMysql/cre/mysql-add-dbs.sh.tmpl
+++ b/creMysql/cre/mysql-add-dbs.sh.tmpl
@@ -27,7 +27,7 @@ mysql_user="${mysql_user:0:24}"
 mysql_pwd="{{ $container.Env.MYSQL_PWD }}"
 {{else}}
 mysql_pwd="PWD:$(printf '%s' '$mysql_user:{{sha1 $rootPassword}}' | md5sum | cut -d ' ' -f 1)"
-mysql_pwd="${pwd:0:32}"
+mysql_pwd="${mysql_pwd:0:32}"
 {{ end }}
 
 #maybe (??) import sql only if db did not exist before ??
@@ -40,9 +40,6 @@ fi
 echo "Creating database: {{ $mysqlDb }}"
 mysql -h 127.0.0.1 -P 3306 --user=root --password={{$rootPassword}} -e "CREATE DATABASE IF NOT EXISTS \`{{ $mysqlDb }}\` CHARACTER SET utf8 COLLATE utf8_general_ci; FLUSH PRIVILEGES;"
 
-echo "Create new User: $mysql_user with password $mysql_pwd for new database {{ $mysqlDb }}."
-mysql -h 127.0.0.1 -P 3306 --user=root --password={{$rootPassword}} -e "GRANT ALL PRIVILEGES ON \`{{ $mysqlDb }}\`.* TO '$mysql_user'@'%' IDENTIFIED BY '$mysql_pwd' WITH GRANT OPTION; FLUSH PRIVILEGES;"
-
 ## if init sql file exists import data
 {{ if (exists (printf "/cre/mysql/dumps/%s/database.init.sql" $mysqlDb)) }}
 if [ -e /cre/mysql/dumps/{{ $mysqlDb }}/database.init.sql ]
@@ -52,6 +49,9 @@ then
    mv {{ (printf "/cre/mysql/dumps/%s/database.init.sql" $mysqlDb) }} {{ (printf "/cre/mysql/dumps/%s/database.done.sql" $mysqlDb) }}
 fi
 {{ end }}
+
+echo "Create new User: $mysql_user with password $mysql_pwd for new database {{ $mysqlDb }}."
+mysql -h 127.0.0.1 -P 3306 --user=root --password={{$rootPassword}} -e "GRANT ALL PRIVILEGES ON \`{{ $mysqlDb }}\`.* TO '$mysql_user'@'%' IDENTIFIED BY '$mysql_pwd' WITH GRANT OPTION; FLUSH PRIVILEGES;"
 
 {{ end }} 
 ##end of all containers
