--- a/crePostgres/cre/postgres-add-dbs.sh.tmpl
+++ b/crePostgres/cre/postgres-add-dbs.sh.tmpl
@@ -64,12 +64,12 @@ fi
 
 #check if user already exists?
 if [ $(psql -tAc "SELECT 1 FROM pg_roles WHERE rolname='$postgres_user'") ]; then
- echo "User exists: {{ $postgres_user }}"
- echo "Adapt user: {{ $postgres_user }}"
+ echo "User exists: $postgres_user"
+ echo "Adapt user:  $postgres_user"
  psql -v ON_ERROR_STOP=1 --username postgres -c "Alter USER $postgres_user WITH ENCRYPTED PASSWORD '$postgres_pwd'"
 else
- echo "User missing: {{ $postgres_user }}"
- echo "Creating user: {{ $postgres_user }}"
+ echo "User missing: $postgres_user"
+ echo "Creating user: $postgres_user"
  psql -v ON_ERROR_STOP=1 --username postgres -c "CREATE USER $postgres_user WITH ENCRYPTED PASSWORD '$postgres_pwd'"
 fi
 
